<resources>
    <string name="app_name">MM</string>

    <!-- Grafika -->
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="preparing">Preparing</string>
    <string name="work_job_name">Working</string>

    <!-- ndk -->
    <string name="startPause">Start/Pause</string>
    <string name="rewind">Rewind</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="complete">Complete</string>
    <string name="active">Active</string>
    <string name="list">List</string>
    <string name="statistics">Statistics</string>
    <string name="link">Link</string>
    <string name="info">Info</string>
    <string name="java">Java</string>
    <string name="cpp">Cpp</string>
    <string name="cs">Cs</string>
    <string name="speed">Speed</string>
    <string name="pitch">Pitch</string>
    <string name="rate">Rate</string>
    <string name="min_delay_label_msg">delay (seconds)</string>
    <string name="init_delay_val_msg">0.1</string>
    <string name="min_decay_label_msg">decay(声音衰减) </string>
    <string name="init_decay_val_msg">0.1</string>
    <string name="cmd_start_echo">Start Echo</string>
    <string name="cmd_stop_echo">Stop Echo</string>
    <string name="cmd_get_param">FastPathInfo</string>
    <string name="init_status_msg">Starting Up</string>
    <string name="mic_error_msg">"Audio recording is not supported"</string>
    <string name="fast_audio_info_msg">nativeSampleRate = %1$s\nnativeSampleBufSize = %2$s\n</string>
    <string name="player_error_msg">Failed to Create Audio Player</string>
    <string name="recorder_error_msg">Failed to Create Audio Recorder</string>
    <string name="echoing_status_msg">Engine Echoing...</string>

    <!-- webrtc -->
    <string name="pref_video_call_key">videocall</string>
    <string name="pref_resolution_key">resolution</string>
    <string name="pref_fps_key">fps</string>
    <string name="pref_capture_quality_slider_key">capturequalityslider</string>
    <string name="pref_start_video_bitrate_key">startvideobitrate</string>
    <string name="pref_start_video_bitrate_value_key">startvideobitratevalue</string>
    <string name="pref_video_codec_key">videocodec</string>
    <string name="pref_hw_codec_key">hwcodec</string>
    <string name="pref_capture_to_texture_key">capturetotexture</string>
    <string name="pref_audio_settings_key">audiosettings</string>
    <string name="pref_start_audio_bitrate_key">startaudiobitrate</string>
    <string name="pref_start_audio_bitrate_value_key">startaudiobitratevalue</string>
    <string name="pref_audio_codec_key">audiocodec</string>
    <string name="pref_no_audio_processing_key">audioprocessing</string>
    <string name="pref_aec_dump_key">aecdump</string>
    <string name="pref_opensles_key">opensles</string>
    <string name="pref_misc_settings_key">miscsettings</string>
    <string name="pref_room_server_url_key">roomserverurl</string>
    <string name="pref_display_hud_key">displayhud</string>
    <string name="pref_tracing_key">tracing</string>
    <string name="pref_room_key">room</string>
    <string name="pref_room_list_key">roomlist</string>
    <string name="roomDescription">
        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
    </string>
    <string name="roomNames">Room names:</string>
    <string name="settings">Settings</string>

    <string name="sink_select">Please select the video sink</string>
    <string-array name="sink_array">
        <item>Surface 1</item>
        <item>Surface 2</item>
        <item>SurfaceTexture 1</item>
        <item>SurfaceTexture 2</item>
    </string-array>
    <string name="error_creation">Error creating player:
        check media file is copied to android device</string>
    <string name="test">Test</string>
    <string name="contentGenerationFailedMsg">Failed to generate content.  Some features may be unavailable.\\n\\n%1$s</string>
    <string name="fail">Fail</string>
    <string name="secondsOfVideo">%1$.3f seconds of video!</string>
    <string name="capture">Capture</string>
    <string name="recording">Recording</string>
    <string name="saving">Saving</string>
    <string name="success">Success</string>
    <string name="recordingFailed"><![CDATA[>Recording FAILED (err=%1$d)]]></string>
    <string name="normal">Normal</string>
    <string name="bw">Black/White</string>
    <string name="filter">Filter</string>
    <string name="flatShaded">flat shaded</string>
    <string name="recDrawTwice">Rec: draw twice</string>
    <string name="recOffscreen">Rec: FBO blit x2</string>
    <string name="recFramebuffer">Rec: glBlitFramebuffer [hosed]</string>
    <string name="toggleRecordingOn">Start recording</string>
    <string name="toggleRecordingOff">Stop recording</string>
    <!-- for scheduledSwapUpdateSpinner; match with UPDATE_PATTERNS -->
    <string-array name="scheduledSwapUpdateNames">
        <item>15 fps</item>
        <item>24 fps</item>
        <item>25 fps</item>
        <item>30 fps</item>
        <item>48 fps</item>
        <item>60 fps</item>
        <item>erratic 1/5</item>
    </string-array>
    <!-- for scheduledSwapAheadSpinner; match with FRAME_AHEAD -->
    <string-array name="scheduledSwapAheadNames">
        <item>ASAP</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- for cameraFilter_spinner; match with CameraCaptureActivity constants -->
    <string-array name="cameraFilterNames">
        <item>Normal</item>
        <item>Black &amp; white</item>
        <item>Filter: blur</item>
        <item>Filter: sharpen</item>
        <item>Filter: edge detect</item>
        <item>Filter: emboss</item>
    </string-array>

</resources>
