<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/margin_small"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/curDelay"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:layout_toRightOf="@+id/minDelayLabel"
        android:text="@string/init_delay_val_msg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/minDelayLabel"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/curDelay"
        android:layout_marginTop="0dp"
        android:text="@string/min_delay_label_msg"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/delaySeekBar"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/minDelayLabel"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/minDelayLabel"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:max="10"
        android:progress="1" />

    <TextView
        android:id="@+id/curDecay"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minDelayLabel"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/minDecayLabel"
        android:text="@string/init_decay_val_msg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/minDecayLabel"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/curDecay"
        android:layout_marginTop="0dp"
        android:text="@string/min_decay_label_msg"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/decaySeekBar"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/minDecayLabel"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/minDecayLabel"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:max="10"
        android:progress="1" />

    <Button
        android:id="@+id/captureControlButton"
        style="@style/MediaControlImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/decaySeekBar"
        android:layout_centerHorizontal="true"
        android:onClick="onEchoClick"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:text="@string/cmd_start_echo"
        android:textAllCaps="false" />

    <TextView android:text="@string/init_status_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="3"
        android:id="@+id/statusView"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>